[package]
name = "catalog-crypto-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Normal utilities
http = "1.2.0"
dotenv = "0.15.0"

# Deserialization and serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# DateTime handling
chrono = { version = "0.4.39", features = ["serde"] }

# For the api building and stuff
axum = { version = "0.8.1", features = ["macros"] }
url = "2.5.4"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { features = ["fs", "trace", "cors"], version = "0.6.2" }

# For logging and stuff
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# For the api
reqwest = { version = "0.12.12", features = ["json", "blocking"] }

# Now for the database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "any", "tls-native-tls", "runtime-tokio", "postgres", "chrono", "time"] }
mongodb = "3.2.0"
prkorm = "0.5.4"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc

# For error handling but not used to thiserror don't ask me why i'am using it
anyhow = "1.0.95"   # i have used it btw
thiserror = "2.0.11"
surrealdb = {version = "2.1.4", features = ["http","protocol-http"]}
once_cell = "1.20.2"

# Test url's
# Depth History
# http://localhost:3000/depth_history?date_range=2023-08-01,2023-09-01&liquidity_gt=148940851989623&sort_by=asset_depth&order=ASC&page=2&limit=2

# Earnings History
# http://localhost:3000/earning_history?page=2&limit=3&date_range=2023-08-01,2023-09-01&sort_by=block_rewards&order=desc&earnings_gt=146109956715&block_rewards_gt=12371026084&node_count_gt=85&pool=AVAX.AVAX

# Swap History
# http://localhost:3000/swap_history?sort_by=average_slip&order=asc&limit=2&volume_gt=13287134132699&fees_gt=22423040539&page=2&date_range=2023-08-01,2023-09-01

# Runepool Units History
# http://localhost:3000/runepool_units_history?limit=2&order=asc&sort_by=units&units_gt=0&page=2
#&date_range=2023-08-01,2023-09-01  !!! give a proper date range ok this one does'nt work
